# benchmarks

./: README.md  benchmark.py  log_gpu_info.py  pyproject.toml
conf/: config.yaml
conf/experiment/: celeba_dataloading.yaml
