[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = ""
authors = ["Thomas M <thomas5max@gmail.com>"]
license = "GPL v3"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
hydra-core = "^1.1.0"
ethicml = "^0.2.5"
wandb = "^0.10.32"
hydra-submitit-launcher = "^1.1.5"
torch = "^1.9.0"
torchvision = "^0.10.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.1"
black = "^21.6b0"

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
known_third_party = [
  "black",
  "click",
  "click_option_group",
  "ethicml",
  "hydra",
  "matplotlib",
  "mypy",
  "numpy",
  "omegaconf",
  "pandas",
  "pylint",
  "pytest",
  "scipy",
  "setuptools",
  "sklearn",
  "torch",
  "tqdm",
  "wandb",
]
known_future_library = []
extra_standard_library = ["__future__", "typing_extensions"]
line_length = 88
profile = "black"
force_sort_within_sections = "True"
classes = ["MISSING", "TYPE_CHECKING"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
